--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <span>new wraithcode website :]</span>
+<br>
+<br>
+<input placeholder="secrets">
+<nav>
+  <button>draw</button>
+  <button>code</button>
+  <button>write</button>
+  <button>chat</button>
+</nav>
+<a href="motherfuckingwebsite.com">this is why</a>
