--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
   <button>write</button>
   <button>chat</button>
 </nav>
-<a href="motherfuckingwebsite.com">this is why</a>
+<a href="https://motherfuckingwebsite.com">this is why</a>
